# mobile-automate

./: .gitignore  README.md  additional_script.py  allure.properties  pyproject.toml
mobile_automation/: additional_script.py
tests/: ContactTests.py  test_mobile_automation.py
