[tool.poetry]
name = "automate"
version = "0.1.0"
description = "Automation Tests for DOUZONEBIZONE 'Wehago' Application > Contact section"

authors = ["provision95 <x3m0941@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Appium-Python-Client = "^2.6.0"
pytest = "^7.1.2"
allure-pytest = "^2.9.45"
pytest-order = "^1.0.1"
unittest-xml-reporting = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dirscrpit = "additional_script:__main__"