[tool.poetry]
name = "mobile-automation"
version = "0.1.0"
description = "Automation Tests for DOUZONEBIZONE 'Wehago' Application > Contact section"
authors = ["provision95 <x3m0941@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
allure-pytest = "^2.9.45"
pytest-order = "^1.0.1"
Appium-Python-Client = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

readme = "README.md"

repository = "https://github.com/provision95/mobile-automate.git"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dirscript = "mobile_automation.additional_script:main"